[package]
name = "s80-cli"
version = "0.3.0"
edition = "2021"
rust-version = "1.82"
description = "Terminal-native latency/jitter visualizer — self-clocked ICMP ping-pong, colored !!! ticks"
license = "MIT"
repository = "https://github.com/cartossin/s80-cli"

[[bin]]
name = "s80"
path = "src/main.rs"

[dependencies]
socket2 = "0.5"
libc = "0.2"

[profile.release]
lto = true
strip = true
